--- a/StudentMS.BackendApi/StudentMS.BackendApi.csproj
+++ b/StudentMS.BackendApi/StudentMS.BackendApi.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentMS.AdminApp\StudentMS.Application.csproj" />
+    <ProjectReference Include="..\StudentMS.Application\StudentMS.Application.csproj" />
     <ProjectReference Include="..\StudentMS.Data\StudentMS.Data.csproj" />
     <ProjectReference Include="..\StudentMS.ViewModel\StudentMS.ViewModel.csproj" />
   </ItemGroup>
